--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -5,22 +5,28 @@
         <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
       <li>
-        <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Heroku Works</a>
+        <a href="https://www.teamitc.com"><span class="glyphicon glyphicon-user"></span>TeamITC</a>
       </li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span>TeamITC Apps<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started with Ruby on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started with Node on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-php">Getting Started with PHP on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-java">Getting Started with Java on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-go">Getting Started with Go on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-clojure">Getting Started with Clojure on Heroku</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-scala">Getting Started with Scala on Heroku</a></li>
+            <li><a href="">CRM:AdressBook</a></li>
+            <li><a href="">CRM:Oppertunaties</a></li>
+            <li><a href="">CRM:Pipeline</a></li>
+            <li><a href="">CRM:Callflow</a></li>
+            <li><a href="">CRM:Conference</a></li>
+            <li><a href="">ADM:Purchasing</a></li>
+            <li><a href="">ADM:Billing</a></li>
+            <li><a href="">ADM:Procurement</a></li>
+            <li><a href="">ADM:Stock</a></li>
+            <li><a href="">PLN:Schedule</a></li>
+            <li><a href="">PLN:Planning</a></li>
+            <li><a href="">SVC:Service</a></li>
+            <li><a href="">API:Connect</a></li>
             <li class="divider"></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">Getting Started on Heroku with Heroku Connect</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
+            <li><a href="">HR:Leave</a></li>
+            <li><a href="">HR:Time</a></li>
+            <li><a href="">HR:Expenses</a></li>
           </ul>
       </li>
     </ul>
