--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -15,18 +15,22 @@
             <li><a href="">CRM:Pipeline</a></li>
             <li><a href="">CRM:Callflow</a></li>
             <li><a href="">CRM:Conference</a></li>
+            <li class="divider"></li>
             <li><a href="">ADM:Purchasing</a></li>
             <li><a href="">ADM:Billing</a></li>
             <li><a href="">ADM:Procurement</a></li>
             <li><a href="">ADM:Stock</a></li>
+            <li class="divider"></li>
             <li><a href="">PLN:Schedule</a></li>
             <li><a href="">PLN:Planning</a></li>
             <li><a href="">SVC:Service</a></li>
-            <li><a href="">API:Connect</a></li>
             <li class="divider"></li>
             <li><a href="">HR:Leave</a></li>
             <li><a href="">HR:Time</a></li>
             <li><a href="">HR:Expenses</a></li>
+            <li class="divider"></li>
+            <li><a href="">API:Connect</a></li>
+            <li><a href="">SYS:Admin</a></li>
           </ul>
       </li>
     </ul>
