--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -26,8 +26,8 @@
   background: #B01302;
   border-radius: 50%;
   overflow: hidden;
-  width: 100px;
-  height: 100px;
+  xxwidth: 100px;
+  xxheight: 100px;
   margin: auto;
   border: 2px solid white;
 }
