--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,11 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="jumbotron text-center">
+<div class="xxjumbotron text-center">
   <div class="container">
-    <a href="/">
-      <img src="/images/teamitclogo.PNG" width="300">
-    </a>
+    <a href="/"><img src="/images/teamitclogo.PNG" width="300"></a>
     <h1>Getting Started with TeamITC Business apps</h1>
     <p>This is the empty shell for the TeamITC Buiness Applications</p>
     <a type="button" class="btn btn-lg btn-default" href=""><span class="glyphicon glyphicon-flash"></span>Getting Started with TeamITC Business Apps</a>
