--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,20 +1,22 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="xxjumbotron text-center">
-  <div class="container">
+<div class="container-fluid">
+
+  <div class="jumbotron text-center">
     <a href="/"><img src="/images/teamitclogo.PNG" width="300"></a>
     <h1>Getting Started with TeamITC Business apps</h1>
     <p>This is the empty shell for the TeamITC Buiness Applications</p>
     <a type="button" class="btn btn-lg btn-default" href=""><span class="glyphicon glyphicon-flash"></span>Getting Started with TeamITC Business Apps</a>
     <a type="button" class="btn btn-lg btn-primary" href=""><span class="glyphicon glyphicon-download"></span>More on TeamITC</a>
   </div>
-</div>
-<div class="container">
+
   <div class="alert alert-info text-center" role="alert">
     To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-php" class="alert-link">Getting Started with PHP on Heroku</a> tutorial.
   </div>
+
   <hr>
+
   <div class="row">
     <div class="col-md-6">
       <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
@@ -51,5 +53,7 @@
     Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
   </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 {% endblock %}
