--- a/web/views/header.html
+++ b/web/views/header.html
@@ -1,4 +1,3 @@
-
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,4 +8,4 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>TeamITC Business Apps</title>
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/xmain.css" />
