--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="container-fluid">
 
-  <div class="jumbotron text-center">
+  <!-- <div class="jumbotron text-center"> -->
+   <div>
     <a href="/"><img src="/images/teamitclogo.PNG" width="300"></a>
     <h1>Getting Started with TeamITC Business apps</h1>
     <p>This is the empty shell for the TeamITC Buiness Applications</p>
