--- a/web/views/header.html
+++ b/web/views/header.html
@@ -5,4 +5,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>TeamITC Business Apps</title>
-<link rel="stylesheet" type="text/css" href="/stylesheets/xmain.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
